@@ -300,12 +300,21 @@ if test "$ext2fs_h" = no -o "$ext2fs_lib" = no; then
 fi
 
 dnl
+dnl Try to use ext2_fs.h header from libext2fs instead of from the kernel
+dnl
+AC_CHECK_HEADERS(ext2fs/ext2_fs.h)
+
+dnl
 dnl Check for ext2_ino_t type
 dnl
 AC_MSG_CHECKING(for ext2_ino_t type in libext2fs headers)
 AC_TRY_COMPILE([#include <stdio.h>
+#ifdef HAVE_EXT2FS_EXT2_FS_H
+#include <ext2fs/ext2_fs.h>
+#else
 #include <linux/ext2_fs.h>
-#include <ext2fs/ext2fs.h>], 
+#endif
+#include <ext2fs/ext2fs.h>],
 [ext2_ino_t ino = 0;], 
 [AC_DEFINE(HAVE_EXT2_INO_T) AC_MSG_RESULT(yes)],
 AC_MSG_RESULT(no))
@@ -315,7 +324,11 @@ dnl Check for s_journal_inum field in ext2_super_block struct
 dnl
 AC_MSG_CHECKING(for s_journal_inum field in ext2_super_block struct)
 AC_TRY_COMPILE([#include <stdio.h>
+#ifdef HAVE_EXT2FS_EXT2_FS_H
+#include <ext2fs/ext2_fs.h>
+#else
 #include <linux/ext2_fs.h>
+#endif
 #include <ext2fs/ext2fs.h>],
 [struct ext2_super_block es; es.s_journal_inum = 0;],
 [AC_DEFINE(HAVE_EXT2_JOURNAL_INUM) AC_MSG_RESULT(yes)],
