@@ -41,7 +41,7 @@
 
 #ifndef lint
 static const char rcsid[] =
-	"$Id: itime.c,v 1.18 2001/03/21 09:37:13 stelian Exp $";
+	"$Id: itime.c,v 1.19 2001/06/18 10:58:28 stelian Exp $";
 #endif /* not lint */
 
 #include <config.h>
@@ -56,7 +56,11 @@ static const char rcsid[] =
 #include <sys/param.h>
 #include <sys/time.h>
 #ifdef	__linux__
+#ifdef HAVE_EXT2FS_EXT2_FS_H
+#include <ext2fs/ext2_fs.h>
+#else
 #include <linux/ext2_fs.h>
+#endif
 #include <ext2fs/ext2fs.h>
 #include <time.h>
 #include <bsdcompat.h>
