@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.116 2001/05/26 11:11:16 stelian Exp $
+$Id: CHANGES,v 1.117 2001/06/18 10:58:27 stelian Exp $
 
 Changes between versions 0.4b22 and 0.4b23 (released ????????????)
 ==================================================================
@@ -8,6 +8,11 @@ Changes between versions 0.4b22 and 0.4b23 (released ????????????)
 
 2.	Implement the Sun rmt extended protocol. Patch submitted
 	by Ian Gordon <iangordon@users.sourceforge.net>.
+
+3.	Check for the e2fsprogs header <ext2fs/ext2_fs.h> instead of 
+	the linux kernel header. This ensures that dump always has the
+	latest version of this file. Patch submitted by
+	Andreas Dilger <adilger@turbolinux.com>.
 
 Changes between versions 0.4b21 and 0.4b22 (released May 12, 2001)
 ==================================================================
